[fix] blog post horizontal scroll fixed

--- a/frappe/public/less/website.less
+++ b/frappe/public/less/website.less
@@ -405,8 +405,8 @@ fieldset {
     background-color: @light-bg;
     position: absolute;
     height: 100%;
-    width: 4000px;
-    left: -2000px;
+    width: 100vw;
+    left: ~"calc((100vw - 100%)/ -2)";
     z-index: -1;
 }
 
